Changelog for Collage

    (name of developer listed in brackets)

* Made split- and expand-icons transparent
  [malthe]

* Added clickable link view.
  
* Simplified view class names.
  [malthe]

* Removed annotations hack (we now expect content to be IAnnotatable).
  [malthe]
  
* Image standard display now shows the actual image rather than its
  preview.  This caused issues with large images in a Collage being
  upscaled when displayed.  [rockdj]

* Various bug fixes
  [malthe]
    
* No longer ship with jQuery.
  [malthe]
  
* Show locking viewlet in content menu
  [malthe]
  
* Fixed a jQuery integration issue
  [malthe]
    
* Added a search text field in existing_items to find items in large sites.
  Thanks to Silvio Tomatis for the patch.
  This closes ticket http://plone.org/products/collage/issues/12.
  [zegor]

* Renamed manage_page to compose_page to avoid ZMI filtering access problem
  [zegor]

* Added borders on manage_page to distinct rows, columns and items
  [zegor]

* Added "portlets" views
  [zegor]

* Rows, Colums and Aliases not indexed in portal_catalog
  [zegor]

* Do not display Aliases with insufficient privileges
  [zegor]
 
* Made the Collection item size matter, and added a More... button [regebro]

* Added content views for ATLink, ATFile and ATNewsItem
  [zegor]

* Fixed some i18n problems
  Added English and French po files
  Resynchronized po files with pot
  [zegor]

* Do not display share and properties tabs with Plone 3.0
  [zegor]

* Added .metadata to cache icons
  [zegor]

* Added delete-object view method to avoid redirection to confirmation_form
  [zegor]

* Refactored codebase
    Moved code out of ./browser/browser.py into separate files.

    New directory structure:

    ./browser/viewlets     viewlet templates
    ./browser/views        content view templates
    ./browser/templates    collage ui templates

    Zope 3 configuration files:

    configuration.zcml     collage ui and functionality