@@ -1,13 +1,17 @@
 <configure xmlns="http://namespaces.zope.org/zope"
            xmlns:browser="http://namespaces.zope.org/browser">
 
+  <browser:menu
+     id="collage-views"/>
+
   <browser:page
      name="standard"
      for="Products.ATContentTypes.content.document.ATDocument"
      permission="zope.Public"
      template="views/document_standard.pt"
-     class=".views.StandardView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Standard"
      />
 
   <browser:page
@@ -15,8 +19,9 @@
      for="Products.ATContentTypes.content.document.ATDocument"
      permission="zope.Public"
      template="views/document_featured.pt"
-     class=".views.FeaturedView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Featured"
      />
 
   <browser:page
@@ -24,8 +29,9 @@
      for="Products.ATContentTypes.content.document.ATDocument"
      permission="zope.Public"
      template="views/document_portlet.pt"
-     class=".views.PortletView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Portlet"
      />
 
   <browser:page
@@ -33,8 +39,9 @@
      for="Products.ATContentTypes.content.document.ATDocument"
      permission="zope.Public"
      template="views/document_text.pt"
-     class=".views.TextView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Text"
      />
 
   <browser:page
@@ -42,8 +49,9 @@
      for="Products.ATContentTypes.content.file.ATFile"
      permission="zope.Public"
      template="views/file_standard.pt"
-     class=".views.StandardView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Standard"
      />
 
   <browser:page
@@ -51,8 +59,9 @@
      for="Products.ATContentTypes.content.file.ATFile"
      permission="zope.Public"
      template="views/file_portlet.pt"
-     class=".views.PortletView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Portlet"
      />
 
   <browser:page
@@ -60,8 +69,9 @@
      for="Products.ATContentTypes.content.newsitem.ATNewsItem"
      permission="zope.Public"
      template="views/newsitem_standard.pt"
-     class=".views.StandardView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Standard"
      />
 
   <browser:page
@@ -69,8 +79,9 @@
      for="Products.ATContentTypes.content.newsitem.ATNewsItem"
      permission="zope.Public"
      template="views/newsitem_portlet.pt"
-     class=".views.PortletView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Portlet"
      />
 
   <browser:page
@@ -78,8 +89,9 @@
      for="Products.ATContentTypes.content.link.ATLink"
      permission="zope.Public"
      template="views/link_standard.pt"
-     class=".views.StandardView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Standard"
      />
   
   <browser:page
@@ -87,8 +99,9 @@
      for="Products.ATContentTypes.content.link.ATLink"
      permission="zope.Public"
      template="views/link_clickable.pt"
-     class=".views.ClickableView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Clickable"
      />
 
   <browser:page
@@ -96,8 +109,9 @@
      for="Products.ATContentTypes.content.link.ATLink"
      permission="zope.Public"
      template="views/link_portlet.pt"
-     class=".views.PortletView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Portlet"
      />
 
   <browser:page
@@ -105,8 +119,9 @@
      for="Products.ATContentTypes.content.topic.ATTopic"
      permission="zope.Public"
      template="views/topic_standard.pt"
-     class=".views.StandardView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Standard"
      />
 
     <browser:page
@@ -114,8 +129,9 @@
      for="Products.ATContentTypes.content.topic.ATTopic"
      permission="zope.Public"
      template="views/topic_album.pt"
-     class=".views.AlbumTopicView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Album"
      />
 
   <browser:page
@@ -123,8 +139,9 @@
      for="Products.ATContentTypes.content.topic.ATTopic"
      permission="zope.Public"
      template="views/topic_portlet.pt"
-     class=".views.PortletView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Portlet"
      />
 
   <browser:page
@@ -132,8 +149,9 @@
      for="Products.ATContentTypes.content.folder.ATFolder"
      permission="zope.Public"
      template="views/folder_standard.pt"
-     class=".views.StandardView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Standard"
      />
 
   <browser:page
@@ -141,8 +159,9 @@
      for="Products.ATContentTypes.content.folder.ATFolder"
      permission="zope.Public"
      template="views/folder_portlet.pt"
-     class=".views.PortletView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Portlet"
      />  
 
   <browser:page
@@ -151,7 +170,8 @@
      permission="zope.Public"
      template="views/event_standard.pt"
      class=".views.BaseView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     menu="collage-views"
+     title="Standard"
      />
 
   <browser:page
@@ -159,8 +179,9 @@
      for="Products.ATContentTypes.content.event.ATEvent"
      permission="zope.Public"
      template="views/event_portlet.pt"
-     class=".views.PortletView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Portlet"
      />
 
   <browser:page
@@ -168,8 +189,9 @@
      for="Products.ATContentTypes.content.image.ATImage"
      permission="zope.Public"
      template="views/image_standard.pt"
-     class=".views.StandardView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Standard"
      />
 
   <browser:page
@@ -177,8 +199,9 @@
      for="Products.ATContentTypes.content.image.ATImage"
      permission="zope.Public"
      template="views/image_portlet.pt"
-     class=".views.PortletView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.BaseView"
+     menu="collage-views"
+     title="Portlet"
      />
   
   <browser:page
@@ -186,8 +209,9 @@
      for="Products.Collage.interfaces.ICollageRow"
      permission="zope.Public"
      template="views/row_standard.pt"
-     class=".views.AutomaticRowView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.RowView"
+     menu="collage-views"
+     title="Standard"
      />
 
   <browser:page
@@ -195,8 +219,9 @@
      for="Products.Collage.interfaces.ICollageRow"
      permission="zope.Public"
      template="views/row_largeleft.pt"
-     class=".views.LargeLeftRowView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.RowView"
+     menu="collage-views"
+     title="Large left"
      />
 
   <browser:page
@@ -204,8 +229,9 @@
      for="Products.Collage.interfaces.ICollageRow"
      permission="zope.Public"
      template="views/row_largeright.pt"
-     class=".views.LargeRightRowView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     class=".views.RowView"
+     menu="collage-views"
+     title="Large right"
      />
 
   <browser:page
@@ -214,7 +240,8 @@
      permission="zope.Public"
      template="views/column_standard.pt"
      class=".views.BaseView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     menu="collage-views"
+     title="Standard"
      />
 
   <browser:page
@@ -223,7 +250,8 @@
      permission="zope.Public"
      template="views/fallback.pt"
      class=".views.BaseView"
-     layer="Products.Collage.interfaces.ICollageBrowserLayer"
+     menu="collage-views"
+     title="Fallback"
      />
 
 </configure>
